Fix scrollbar

--- a/shuttle/static/assets/css/shuttle.css
+++ b/shuttle/static/assets/css/shuttle.css
@@ -107,8 +107,7 @@ nav.navbar {
 }
 
 .scrolling-wrapper {
-  overflow-x: scroll;
-  overflow-y: hidden;
+  overflow: auto;
   white-space: nowrap;
 }
 
